# folivafy

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Folivafy.postman_collection.json  README.md  auto-openapi.yml  dev_realm.json  folivafy_localdev.postman_environment.json  generate-models.sh  integration-test.sh  integration-test.sql  mail-test.sh  openapi.yml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sql
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/: collection.rs  collection_document.rs  event.rs  grant.rs  lib.rs  mod.rs  prelude.rs
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: deployment.yaml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_basic.rs  m20220101_000001_create_table.rs  m20230623_190444_events.rs  m20231203_180149_grants.rs
openapi-generator-templates/: models.mustache
src/: api.rs  cron.rs  gen_openapi.rs  lib.rs  mail.rs  main.rs  models.rs  monitoring.rs
src/api/: auth.rs  create_collection.rs  create_document.rs  create_event.rs  db.rs  dto.rs  get_document.rs  grants.rs  hooks.rs  list_collections.rs  list_documents.rs  search_documents.rs  types.rs  update_document.rs
src/api/data_service/: document_service.rs  event_service.rs  mod.rs  user_service.rs
src/api/hooks/: grants.rs  mod.rs  staged_delete.rs
src/api/maintenance/: api_rebuild_grants.rs  mod.rs
src/axumext/: extractors.rs
