[package]
name = "folivafy"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.73"
axum = "0.6"
axum-macros = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
jwt-authorizer = { git = "https://github.com/cduvray/jwt-authorizer", rev = "7fc800d", default-features = false, features = [
    "rustls-tls",
] }
#jwt-authorizer = "0.9.0"
lazy_static = "1.4"
lettre = { version = "0.10", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
] }
migration = { path = "migration" } # depends on your needs
openapi = { path = "./generated", default-features = false, features = [
    "lazy_static",
    "regex",
] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls",
    "rustls-tls",
] }
sea-orm = { version = "0.12", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-query = { version = "0", features = [ "with-chrono" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
