[package]
name = "folivafy"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[jobs.test]
command = ["cargo", "test", "--workspace"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.73"
axum = "0.7"
axum-macros = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
jwt-authorizer = { version = "0.15.0", default-features = false, features = [
    "rustls-tls",
] }
lazy_static = "1.4"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
] }
migration = { path = "migration" } # depends on your needs
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
sea-orm = { version = "1.1.3", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-query = { version = "0.32.1", features = ["with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.20.0"
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }


[dev-dependencies]
pretty_assertions = "1.4.0"
