[package]
name = "entity"
version = "0.2.0"
edition = "2021"

[lib]
name = "entity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.1" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
